Add workaround to avoid pasting data from OOo Calc as an OLE object

Help for fdo#31077.